--- a/stylesheets/scss/components/_bottom-sheet.scss
+++ b/stylesheets/scss/components/_bottom-sheet.scss
@@ -6,6 +6,7 @@
 
 .sc-bottom-sheet {
 	@extend .sc-z16;
+	@include transition(height $transition-small-duration $returning-transition);
 	position: fixed;
 	background: $white;
     z-index: 4;
@@ -18,6 +19,14 @@
 	font-weight: 400;
 	font-size: remCalc(16px);
 	display: none;
+
+	@media #{$medium-up} {
+		@include transition(height $transition-medium-duration $returning-transition);
+	}
+
+	@media #{$large-up} {
+		@include transition(height $transition-large-duration $returning-transition);
+	}
 
 	ul {
 		list-style-type: none;
@@ -93,6 +102,13 @@
 					}
 				}
 			}
+		}
+	}
+
+	&-music {
+		figure {
+			padding: 0;
+			margin: 0;
 		}
 	}
 }
