Fixing slider and added slider settings

--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -404,6 +404,30 @@ $sidenav-profile-info-font-size: remCalc(14px); // Default remCalc(14px)
 $sidenav-profile-scrim: to top, rgba($grey-900, 0.4) 15%, rgba($white, 0) 33%; // Default to top, rgba($grey-900, 0.4) 15%, rgba($white, 0) 33%
 
 /**************************************
+ * Sliders
+ **************************************/
+// Track
+$slider-track-height: remCalc(2px); // Default remCalc(2px)
+$slider-track-background-color: rgba($black, .26); // Default rgba($black, .26)
+$slider-track-small-transition: background $transition-small-duration $basic-transition; // Default background $transition-small-duration $basic-transition
+$slider-track-medium-transition: background $transition-medium-duration $basic-transition; // Default background $transition-medium-duration $basic-transition
+$slider-track-large-transition: background $transition-large-duration $basic-transition; // Default background $transition-large-duration $basic-transition
+$slider-track-active-background: $main-color; // Default $main-color
+
+// Thumb
+$slider-thumb-small-transition: background $transition-small-duration $basic-transition unquote(',') border $transition-small-duration $basic-transition unquote(',') height $transition-small-duration $basic-transition unquote(',') width $transition-small-duration $basic-transition unquote(',') margin $transition-small-duration $basic-transition; // Default background $transition-small-duration $basic-transition unquote(',') border $transition-small-duration $basic-transition unquote(',') height $transition-small-duration $basic-transition unquote(',') width $transition-small-duration $basic-transition unquote(',') margin $transition-small-duration $basic-transition
+$slider-thumb-medium-transition: background $transition-medium-duration $basic-transition unquote(',') border $transition-medium-duration $basic-transition unquote(',') height $transition-medium-duration $basic-transition unquote(',') width $transition-medium-duration $basic-transition unquote(',') margin $transition-medium-duration $basic-transition; // Default background $transition-medium-duration $basic-transition unquote(',') border $transition-medium-duration $basic-transition unquote(',') height $transition-medium-duration $basic-transition unquote(',') width $transition-medium-duration $basic-transition unquote(',') margin $transition-medium-duration $basic-transition
+$slider-thumb-large-transition: background $transition-large-duration $basic-transition unquote(',') border $transition-large-duration $basic-transition unquote(',') height $transition-large-duration $basic-transition unquote(',') width $transition-large-duration $basic-transition unquote(',') margin $transition-large-duration $basic-transition; // Default background $transition-large-duration $basic-transition unquote(',') border $transition-large-duration $basic-transition unquote(',') height $transition-large-duration $basic-transition unquote(',') width $transition-large-duration $basic-transition unquote(',') margin $transition-large-duration $basic-transition
+$slider-thumb-size: remCalc(14px); // Default remCalc(14px);
+$slider-thumb-border: remCalc(2px) solid $slider-track-background-color; // Default remCalc(2px) solid $slider-background-color
+$slider-thumb-margin: remCalc(-6px) 0 0 0; // Default remCalc(-6px) 0 0 0
+$slider-thumb-active-color: $main-color; // Default $main-color
+$slider-thumb-active-border: remCalc(2px) solid $slider-thumb-active-color; // Default remCalc(2px) solid $slider-thumb-active-color
+$slider-thumb-active-size: remCalc(16px); // Default remCalc(16px)
+$slider-thumb-active-margin: remCalc(-7px) 0 0 0; // Default remCalc(-7px) 0 0 0
+$slider-thumb-disabled-border: remCalc(2px) solid $white; // Default remCalc(2px) solid $white
+
+/**************************************
  * Textfields
  **************************************/
 $textfield-width: 100%; // Default 100%;
